--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+div {
+	display:inline-block;
+}
 #app{
 	margin:0 auto;
 }
@@ -5,12 +8,22 @@
 	padding: 10px;
 	text-align: center;
 }
+#app #maestro{
+	display: inline-block;
+	width: 100%;
+}
 #app #detalle{
 	margin: 0 auto;
+	margin-top:50px;
+	display: block;
+	margin-left:25%;
 }
 .btn{
 	font-weight: bold!important;
 }
-li{
-	list-style: none;
+a{
+	text-align: center!important;
+}
+label{
+	min-width: 70px;
 }
